syntax = "proto3";

package storage;

import "google/protobuf/timestamp.proto";
import "storage/resource_collection.proto";
import "storage/user.proto";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

message CollectorRuntimeConfigACK {
  string error = 1;
  Action action = 2;

  enum Action {
    ACK = 0;
    NACK = 1;
  }
}

enum RuntimeFeature {
  PROCESSES = 0;
  NETWORK_CONNECTIONS = 1;
  NETWORK_ENDPOINTS = 2;
}

message Status {
  message ProcessStatus {
    bool enabled = 1;
  }

  message NetworkConnectionStatus {
    bool enabled = 1;
    bool aggregate_external = 2;
  }

  message NetworkEndpointStatus {
    bool enabled = 1;
    bool processes_listening_on_port = 2;
  }

  oneof status {
    ProcessStatus process_status = 1;
    NetworkConnectionStatus network_connection_status = 2;
    NetworkEndpointStatus network_endpoint_status = 3;
  }
}

message RuntimeFeatureConfig {
  message RuntimeRule {
    string resource_collection_name = 1;
    Status status = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp last_updated = 4;
    SlimUser created_by = 5;
    SlimUser updated_by = 6;
  }

  RuntimeFeature feature = 1;
  Status default_status = 2;
  repeated RuntimeRule rules = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp last_updated = 5;
  // The default is not created by a user, but by central so there is no created_by.
  SlimUser updated_by = 6;
}

message CollectorRuntimeConfig {
  repeated RuntimeFeatureConfig runtime_feature_config = 1;
  repeated ResourceCollection resource_collections = 2;
}

message StatusWithUser {
  Status status = 1;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp last_updated = 4;
  SlimUser created_by = 5;
  SlimUser updated_by = 6;
}

message CollectionWithFeatureStatuses {
  string resource_collection_name = 1;
  repeated StatusWithUser status_with_user = 2;
}

message StatusBasedConfig {
  repeated CollectionWithFeatureStatuses collection_with_feature_statuses = 1;
  repeated ResourceCollection resource_collections = 2;
}

// Collector needs to know the cluster it is running on to apply the rules correctly.
message CollectorRuntimeConfigWithCluster {
  string cluster_name = 1;
  CollectorRuntimeConfig config = 2;
}
